--- a/config/subscription.yml
+++ b/config/subscription.yml
@@ -6,7 +6,7 @@ defaults: &defaults
   expired_plan: free
 
   # trial period length (days) before first billing (can be 0 for no trial) (default = 30)
-  trial_period: 30
+  trial_period: 0
   
   # grace period length (days) after subscription is past due before it is expired (closed down)
   grace_period: 7
@@ -15,7 +15,7 @@ defaults: &defaults
   mailer_class: SubscriptionMailer
       
   # where to send admin reports (nil for no emails)
-  admin_report_recipients: jonathan@parkerhill.com
+  admin_report_recipients: perichon@gmail.com
   
   # shortcut configuration of the ActiveMerchant gateway
   #  test sets the Billing mode
