--- a/config/contacts.yml
+++ b/config/contacts.yml
@@ -9,3 +9,14 @@ development:
     application_id: '00000000400416AC'
     secret_key: 'cRYUVhNlT8DrJu5z5ZV4HwCNGa4uU3jG'
     privacy_policy_url: 'http://local.sadhana.com.ar/'
+production:
+  google:
+    consumer_key: ENV['GOOGLE_CONSUMER_KEY']
+    consumer_secret: ENV['GOOGLE_CONSUMER_SECRET']
+  yahoo:
+    consumer_key: ENV['YAHOO_CONSUMER_KEY']
+    consumer_secret: ENV['YAHOO_CONSUMER_SECRET']
+  windows_live:
+    application_id: ENV['WINDOWSLIVE_APP_ID']
+    secret_key: ENV['WINDOWSLIVE_CONSUMER_KEY']
+    privacy_policy_url: ENV['WINDOWSLIVE_POLICY']
