--- a/config/contacts.yml
+++ b/config/contacts.yml
@@ -1,4 +1,4 @@
-config: &config
+development:
   google:
     consumer_key: ENV['GOOGLE_CONSUMER_KEY']
     consumer_secret: ENV['GOOGLE_CONSUMER_SECRET']
@@ -9,8 +9,14 @@ config: &config
     application_id: ENV['WINDOWSLIVE_APP_ID']
     secret_key: ENV['WINDOWSLIVE_CONSUMER_KEY']
     privacy_policy_url: ENV['WINDOWSLIVE_POLICY_URL']
-
-development:
-  <<: *config
 production:
-  <<: *config
+  google:
+    consumer_key: ENV['GOOGLE_CONSUMER_KEY']
+    consumer_secret: ENV['GOOGLE_CONSUMER_SECRET']
+  yahoo:
+    consumer_key: ENV['YAHOO_CONSUMER_KEY']
+    consumer_secret: ENV['YAHOO_CONSUMER_SECRET']
+  windows_live:
+    application_id: ENV['WINDOWSLIVE_APP_ID']
+    secret_key: ENV['WINDOWSLIVE_CONSUMER_KEY']
+    privacy_policy_url: ENV['WINDOWSLIVE_POLICY_URL']
