--- a/config/s3.yml
+++ b/config/s3.yml
@@ -1,3 +1,3 @@
-access_key_id: 'AKIAIBC3UWY6XDAQVWAA'
-secret_access_key: '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'
-bucket: 'sadhana_production'
+access_key_id:
+secret_access_key:
+bucket:
