gitignore facebooker.yml

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ config/database.yml
 config/contacts.yml
 config/hoptoad.yml
 config/omniauth.yml
+config/facebooker.yml
 config/s3.yml
 config/translation.yml
 db/*.sql*
